--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,10 +8,10 @@ import ExternalLink from "../components/icons/ExternalLink.astro";
     <!-- Texto -->
     <div class="flex-1 text-center md:text-left space-y-6">
       <h1 class="text-5xl md:text-7xl font-extrabold leading-tight">
-        Hola soy <br />
+        Hola soy <br/>
         <span
-          class="bg-gradient-to-r from-[var(--color-primary)] via-[var(--color-secondary)] to-[var(--color-accent)] bg-clip-text text-transparent"
-        >
+          class="bg-gradient-to-r from-[var(--color-primary)] via-[var(--color-secondary)] to-[var(--color-accent)] 
+          bg-clip-text text-transparent">
           Nat Arrazola
         </span>
       </h1>
@@ -27,8 +27,8 @@ import ExternalLink from "../components/icons/ExternalLink.astro";
         <!-- Botón Ver proyectos -->
         <a
           href="#proyectos"
-          class="flex items-center gap-2 px-6 py-3 rounded-xl font-semibold text-white dark:text-[#000309] bg-[var(--color-primary)] hover:bg-[var(--color-secondary)] transition"
-        >
+          class="flex items-center gap-2 px-6 py-3 rounded-xl font-semibold text-white
+         dark:text-[#000309] bg-[var(--color-primary)] hover:bg-[var(--color-secondary)] transition">
           Ver proyectos
           <ArrowNarrowRight class="w-5 h-5" />
         </a>
@@ -37,8 +37,8 @@ import ExternalLink from "../components/icons/ExternalLink.astro";
         <a
           href="/cv.pdf"
           target="_blank"
-          class="flex items-center gap-2 px-6 py-3 rounded-xl font-semibold border border-[var(--color-border)] text-[var(--color-text)] hover:bg-[var(--color-surface)] transition"
-        >
+          class="flex items-center gap-2 px-6 py-3 rounded-xl font-semibold border border-[var(--color-border)] 
+          text-[var(--color-text)] hover:bg-[var(--color-surface)] transition">
           Ver CV
           <ExternalLink class="w-5 h-5" />
         </a>
@@ -49,10 +49,9 @@ import ExternalLink from "../components/icons/ExternalLink.astro";
     <div class="flex-1 flex justify-center mt-10 md:mt-0">
       <div
         class="relative w-72 h-72 md:w-96 md:h-96 rounded-full p-[6px]"
-        style="background: linear-gradient(135deg, var(--color-primary), var(--color-accent));"
-      >
+        style="background: linear-gradient(135deg, var(--color-primary), var(--color-accent));">
         <img
-          src="/me.png"
+          src="/me.webp"
           alt="Foto de Nat"
           class="rounded-full w-full h-full object-cover bg-[var(--color-surface)]"
         />
