--- a/src/components/features/aboutMe/AboutMe.astro
+++ b/src/components/features/aboutMe/AboutMe.astro
@@ -1,24 +1,22 @@
 ---
-import { onMount } from "astro/jsx-runtime";
+
 ---
 
 <!-- Contenedor general -->
 <section
-  class="sobre-mi opacity-0 translate-y-10 transition-all duration-1000 ease-out"
-  id="sobre-mi"
->
+  class="container mx-auto px-6 md:px-12 lg:px-16 flex flex-col md:flex-row items-center justify-between gap-12 sobre-mi opacity-0 translate-y-10 transition-all duration-1000 ease-out"
+  id="sobre-mi">
   <div class="w-full flex flex-col p-4">
-    <h2 class="font-bold text-5xl text-center mb-6 text-[var(--color-heading)]">
+    <h2 class="font-bold text-5xl text-left mb-6 text-[var(--color-heading)]">
       Sobre mí
     </h2>
 
     <!-- Tarjeta -->
     <div
       class="group relative w-full bg-[var(--color-surface)] shadow-md rounded-2xl overflow-hidden 
-             transition-all duration-500 ease-in-out transform hover:-translate-y-2 hover:shadow-2xl"
-    >
+             transition-all duration-500 ease-in-out transform hover:-translate-y-2 hover:shadow-2xl">
       <img
-        src="/me.webp"
+        src="/about-me.webp"
         alt="Acerca de mí"
         class="w-full h-[400px] object-cover brightness-90 group-hover:brightness-100 transition-all duration-500"
         loading="lazy"
