--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,9 @@
 import Layout from '../layouts/Layout.astro';
 import Hero from "../components/Hero.astro";
 
-import AboutMeSection from "../components/features/aboutMe/TabsAbout.astro";
 import TabsAbout from '../components/features/aboutMe/TabsAbout.astro';
+import Projects from '../components/features/projects/projects.astro';
+import Contact from '../components/features/contact/contact.astro'
 
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -13,4 +14,6 @@ import TabsAbout from '../components/features/aboutMe/TabsAbout.astro';
 <Layout>
 	<Hero />
 	<TabsAbout />
+	<Projects />
+	<Contact />
 </Layout>
