--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,9 +3,8 @@ import Layout from '../layouts/Layout.astro';
 import Hero from "../components/Hero.astro";
 
 import TabsAbout from '../components/features/aboutMe/TabsAbout.astro';
-import Projects from '../components/features/projects/projects.astro';
-import Contact from '../components/features/contact/contact.astro'
-
+import Projects from '../components/features/projects/Projects.astro';
+import Contact from '../components/features/contact/Contact.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
