--- a/src/components/features/contact/contact.astro
+++ b/src/components/features/contact/contact.astro
@@ -8,7 +8,7 @@ const redes = [
 ---
 
 <section
-  id="contacto"
+  id="contact"
   class="container mx-auto px-6 md:px-12 lg:px-16 py-24 grid md:grid-cols-2 gap-16 items-start 
   opacity-0 translate-y-10 transition-all duration-1000 ease-out contacto-section">
   <!-- Contenido IZQUIERDA -->
