--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 import '../styles/global.css'
 ---
 
@@ -15,6 +16,7 @@ import '../styles/global.css'
 	<body>
 		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
 
